# OpenPilot

./: CMakeLists.txt  CODE_OF_CONDUCT.md  Readme.md  SECURITY.md  main.cpp  serial.cc  serial.lib
.github/workflows/: c-cpp.yml
OpenPilot/: CMakeLists.txt  Readme.md
OpenPilot/Startup/: Important.txt  activator.sh
OpenPilot/communication/: message protocol.cpp  messageprotocol.h  telemetry.cpp  telemetry.h
OpenPilot/control/: control utils.cpp  control_utils.h  pid controller.cpp  pidcontroller.h
OpenPilot/core/navigation/: gps navigation.cpp  gps_navigation.h  navigation utils.cpp  navigation_utils.h  waypoint follower.cpp  waypoint_follower.h
OpenPilot/examples/boat example/: boat config.yaml  boat run example.cpp
OpenPilot/examples/car example/: car config.yaml  car run example.cpp
OpenPilot/examples/drone example/: drone config.yaml  run drone example.cpp
OpenPilot/includes/: OpenPilot.h
OpenPilot/sensors/: camera sensor.cpp  gps sensor.cpp  lidar sensor.cpp
OpenPilot/sensors/opencvlib/: opencv.hpp
OpenPilot/sensors/opencvlib/modules/: calib3d.hpp  features2d.hpp  stitching.hpp
OpenPilot/sensors/opencvlib/modules/dnn/include/opencv2/: dnn.hpp
OpenPilot/sensors/seriallib/: CMakeLists.txt
OpenPilot/sensors/seriallib/include/serial/: serial.h
OpenPilot/sensors/seriallib/include/serial/impl/: unix.h  win.h
OpenPilot/utils/: config reader.cpp  logger.cpp
